welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:8: error: type mismatch;
 found   : Boolean
 required: Int
    } else if (nums(i > max2 && nums(i) != max)) {
                             ^